RESOLVED FIXED207490
REGRESSION (r246055): Data detected URLs are no longer blue
https://bugs.webkit.org/show_bug.cgi?id=207490
Summary REGRESSION (r246055): Data detected URLs are no longer blue
Timothy Hatcher
Reported 2020-02-10 11:53:26 PST
Open an email with an inline URL that is not linked in the original HTML, and the link added by WebKit's DD code is not blue. <rdar://problem/58760796>
Attachments
Patch (2.43 KB, patch)
2020-02-10 12:03 PST, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2020-02-10 12:03:52 PST
WebKit Commit Bot
Comment 2 2020-02-10 14:40:31 PST
Comment on attachment 390278 [details] Patch Clearing flags on attachment: 390278 Committed r256217: <https://trac.webkit.org/changeset/256217>
WebKit Commit Bot
Comment 3 2020-02-10 14:40:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.