REGRESSION (r246055): Data detected URLs are no longer blue https://bugs.webkit.org/show_bug.cgi?id=207490 rdar://problem/58760796

Reviewed by Tim Horton.

This matches how the old code ended up working, since the old approach inlined the blue link color when
"shouldUseLightLinks" was false. This change allows the link style color to naturally apply as expected.
DD only uses light links when the category is "link" or "phone number" and not in the email signature.

* editing/cocoa/DataDetection.mm:
(WebCore::DataDetection::detectContentInRange): Only set color: currentColor when setting underline color.


Canonical link: https://commits.webkit.org/220497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256217 268f45cc-cd09-0410-ab3c-d52691b4dbfc